added Experience Section

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,9 @@
           <a href="#projects" class="nav-link">Projects</a>
         </li>
         <li>
+          <a href="#experience" class="nav-link">Experience</a>
+        </li>
+        <li>
           <a href="#contact" class="nav-link">Contact</a>
         </li>
       </ul>
@@ -71,11 +74,29 @@
       <a href="" class="btn btn-all-projects">
         Show All
         <i>
-
         </i>
       </a>
     </section>
     <!-- #END OF PROJECTS SECTION -->
+    <!-- #START OF EXPERIENCE SECTION -->
+    <section id="experience" class="experience-section">
+      
+      <div class="experience-grid"> 
+        <figure class="img-container">
+          <img 
+          src="https://lh3.googleusercontent.com/pw/AP1GczPmhG9kS9S-sZE7dqZszerI3ZBwOIaDamMLlddtdjAja6Yz88jfJdz_sf5H5x4ji-Gl8vQovPl0srloOYsJq4oMC6xXb4AeB3iJL77J2Y9chEgp4IJyaWg-XJjxpISR_Lf9I4LzUZuoQbKDtCnITyqVURWJOJM7wT6ffq1Fays0Ec65A6i6MyyvOzjWx6y-uM8CZ2GwkswCnHqNPh1nEMc0IGL1rCSt9u0l8fGPXzzwyETwGl6d_IovGi55o31T2GWnu2f19xizpn5TyoYaP0LePPeJaBt8TKlkKu3XzpCFuktPFcxTllIZb9Wgr_O8XQzGyzOWQcZPP6s1OqGwux8sLXrVbYYiRq1nInYKzQfe_JoI45GlGFJjPXc80F4EeFztssMi9uHhIyTRIiNzEeH28it5st1sO5JedcG2cfm7Swi5N9tn_92SY00DLyZeqjoI-PlYAzIYBR5XsgiKz6ZtV5dWLv5KD7bSVnLQr-dRzCok0wwwEk-DoS_jQqw0JNZhenhoh_0shE_Oxf3L0GP0L--qt-80KC7mmyMWK4IOPdmuLfkFrnFmiubD0OPiRvnkZlM1fn89A3d3V_5MHjaycL5obyyS39PhqC1U2Pa1ZcszZwxXBWYuj2cazosi-ItymLVR_2k6CeSE6-I6oDq18SkJKHNvzTB0J2c-oum2LmYe4vJgxAp4xKL34afMSnY_KpbXnrg5NDx5iIQkTx6YZXOd9X4C1E0BGmFf_p0S3WqA3nqrHN3-xc12pOovDuJ_LcyNeqMbBJfJdYh3-tsGEPXb80RZxKJ3EcYE9qFiYh3edCK8XmbICc9kqr4_RCXfnM-sl5bSutRrmev4LR8ueuOHum-iwPQ5hIqKkGx6UJaLNK1wjtDUwo8Ae7axD2djy6L2yqxXTCQNAp9xXMTJ=w633-h633-s-no-gm?authuser=0"
+          alt="Stefan in action"
+          class="experience-img"/>
+          <figcaption>Stefan in action.</figcaption>
+        </figure>
+        <h2 class="experience-section-title">More About Me</h2>
+        <p class="experience-paragraph">
+          Greetings! I am Stefan, a junior frontend web developer with a passion for crafting seamless user interfaces. Here’s an overview of my journey thus far:
+        </p>
+      </div>
+    </section>
+    <!-- #END OF EXPERIENCE SECTION -->
+    <!-- #START OF CONTACT SECTION -->
     <section id="contact" class="contact-section">
       <h2 class="contact-section-title">Let’s build something amazing together!</h2>
       <br>
@@ -98,5 +119,6 @@
         </a>
       </div>
     </section>
+    <!-- #END OF CONTACT SECTION -->
   </body>
 </html>
