--- a/portfolio.html
+++ b/portfolio.html
@@ -84,14 +84,14 @@
       <div class="experience-grid"> 
         <figure class="img-container">
           <img 
-          src="https://lh3.googleusercontent.com/pw/AP1GczPmhG9kS9S-sZE7dqZszerI3ZBwOIaDamMLlddtdjAja6Yz88jfJdz_sf5H5x4ji-Gl8vQovPl0srloOYsJq4oMC6xXb4AeB3iJL77J2Y9chEgp4IJyaWg-XJjxpISR_Lf9I4LzUZuoQbKDtCnITyqVURWJOJM7wT6ffq1Fays0Ec65A6i6MyyvOzjWx6y-uM8CZ2GwkswCnHqNPh1nEMc0IGL1rCSt9u0l8fGPXzzwyETwGl6d_IovGi55o31T2GWnu2f19xizpn5TyoYaP0LePPeJaBt8TKlkKu3XzpCFuktPFcxTllIZb9Wgr_O8XQzGyzOWQcZPP6s1OqGwux8sLXrVbYYiRq1nInYKzQfe_JoI45GlGFJjPXc80F4EeFztssMi9uHhIyTRIiNzEeH28it5st1sO5JedcG2cfm7Swi5N9tn_92SY00DLyZeqjoI-PlYAzIYBR5XsgiKz6ZtV5dWLv5KD7bSVnLQr-dRzCok0wwwEk-DoS_jQqw0JNZhenhoh_0shE_Oxf3L0GP0L--qt-80KC7mmyMWK4IOPdmuLfkFrnFmiubD0OPiRvnkZlM1fn89A3d3V_5MHjaycL5obyyS39PhqC1U2Pa1ZcszZwxXBWYuj2cazosi-ItymLVR_2k6CeSE6-I6oDq18SkJKHNvzTB0J2c-oum2LmYe4vJgxAp4xKL34afMSnY_KpbXnrg5NDx5iIQkTx6YZXOd9X4C1E0BGmFf_p0S3WqA3nqrHN3-xc12pOovDuJ_LcyNeqMbBJfJdYh3-tsGEPXb80RZxKJ3EcYE9qFiYh3edCK8XmbICc9kqr4_RCXfnM-sl5bSutRrmev4LR8ueuOHum-iwPQ5hIqKkGx6UJaLNK1wjtDUwo8Ae7axD2djy6L2yqxXTCQNAp9xXMTJ=w633-h633-s-no-gm?authuser=0"
+          src="stefan-in-act.jpg"
           alt="Stefan in action"
           class="experience-img"/>
           <figcaption>Stefan in action.</figcaption>
         </figure>
         <h2 class="experience-section-title">More About Me</h2>
         <p class="experience-paragraph">
-          Greetings! I am Stefan, a junior frontend web developer with a passion for crafting seamless user interfaces. Here’s an overview of my journey thus far:
+          Greetings! I am Stefan. As a junior software developer, I’m passionate about creating delightful web experiences. My primary expertise lies in JavaScript, PHP, HTML, CSS, and SQL. 
         </p>
       </div>
     </section>
