portfolio implemented JS

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,16 +109,17 @@
           <i class="fab fa-free-code-camp"></i>
           freeCodeCamp
         </a>
-        <a href="https://github.com/Stefan-Moller134" target="_blank" class="contact-link">
+        <a href="mailto:stefanmoller134@gmail.com" target="_blank" class="contact-link">
           <i class="fas fa-at"></i>
           Email me
         </a>
-        <a href="https://github.com/Stefan-Moller134" target="_blank" class="contact-link">
+        <a href="tel:+27729916781" target="_blank" class="contact-link">
           <i class="fas fa-mobile"></i>
           Phone me
         </a>
       </div>
     </section>
     <!-- #END OF CONTACT SECTION -->
+    <script src="script.js"></script>
   </body>
 </html>
