added Easter Egg

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,14 +35,14 @@
         <p class="my-job"><span class="code" ><<span/><span class="job">Front-End Developer</span><span class="code">/></span></p>
         <br>
         <p><span>My super power?</span><br>
-        I turn Coffee into code! <i class="fa fa-mug-hot"></i></p>
+        I turn Coffee into code! <i class="fa fa-mug-hot" id="coffee"></i></p>
     </section>
     <!-- #END OF WELCOME SECTION -->
     <!-- #START OF PROJECTS SECTION -->
     <section id="projects" class="projects-section">
       <h2 class="projects-section-title">Here are some of my projects</h2>
-      <div class="projects-grid">
-        <a href="" class="project project-tile">
+      <div class="projects-grid" id="tiles">
+        <a href="" class="project project-tile" id="tile">
           <img 
           src="https://live.staticflickr.com/4034/4544827697_6f73866999_b.jpg" class="project-img">
           <p class="project-title">
@@ -71,7 +71,7 @@
           </p>
         </a>
       </div>
-      <a href="" class="btn btn-all-projects">
+      <a href="" class="btn btn-all-projects" id="btn">
         Show All
         <i>
         </i>
