--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             Survey Form
           </p>
         </a>
-        <a href="" class="project project-tile">
+        <a href="https://github.com/Stefan-Moller134/tribute-page" class="project project-tile" target="_blank">
           <img 
           src="img/coffee-tribute-page.png" class="project-img"/>
           <p class="project-title">
@@ -85,7 +85,7 @@
       <div class="experience-grid"> 
         <figure class="img-container">
           <img 
-          src="stefan-in-ac.jpg"
+          src="img/stefan-in-act.jpg"
           alt="Stefan in action"
           class="experience-img"/>
           <figcaption>Stefan in action.</figcaption>
