added documentation project

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,9 @@
             Tribute Page
           </p>
         </a>
-        <a href="" class="project project-tile">
+        <a href="https://github.com/Stefan-Moller134/technical-documentation" class="project project-tile" target="_blank">
           <img 
-          src="https://preview.redd.it/l6azc6nnpe501.jpg?auto=webp&s=56347383125aca79950b609edbab861aaf607181" class="project project-img"/>
+          src="img/technical-documentation-page.png" class="project project-img"/>
           <p class="project-title">
             Technical Documetation Page
           </p>
